--- a/app/src/main/res/layout/activity_add_new_account.xml
+++ b/app/src/main/res/layout/activity_add_new_account.xml
@@ -111,7 +111,7 @@
         android:id="@+id/btnOk"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:text="@string/ok"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -148,6 +148,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/numEchMinute" />
 
+    <CheckBox
+        android:id="@+id/chckActive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:checked="true"
+        android:text="Aktivni"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chckTestAccount" />
+
     <TextView
         android:id="@+id/lblEach"
         android:layout_width="wrap_content"
@@ -177,7 +188,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="84dp"
+        android:layout_marginBottom="8dp"
         android:text="Delete"
         app:layout_constraintBottom_toTopOf="@+id/btnOk"
         app:layout_constraintEnd_toEndOf="parent" />
