--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,41 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView1"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_main_user_list_recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:background="#3d455b"
+        android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <HorizontalScrollView
-            android:id="@+id/hscrll1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <RelativeLayout
-                android:id="@+id/RelativeLayout1"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_gravity="center"
-                android:orientation="vertical">
-
-                <TableLayout
-                    android:id="@+id/table_AccountList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true" />
-            </RelativeLayout>
-        </HorizontalScrollView>
-    </ScrollView>
-
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="5" />
 
     <Button
         android:id="@+id/btn_activity_main_add_new_account"
@@ -46,7 +25,17 @@
         android:text="@string/add_new_account"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView1"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_user_list_recycler"
         tools:visibility="visible" />
+
+    <Button
+        android:id="@+id/btnStartStopService"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="Start/stop service"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_activity_main_add_new_account" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
