--- a/app/src/main/res/layout/activity_main_account_item.xml
+++ b/app/src/main/res/layout/activity_main_account_item.xml
@@ -1,27 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:background="#8EAF9E">
 
     <TextView
-        android:id="@+id/activity_main_account_alias"
+        android:id="@+id/activity_main_item_lblNickName"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Account alias" />
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Account alias"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <CheckBox
-        android:id="@+id/activity_main_account_active"
+    <TextView
+        android:id="@+id/activity_main_item_lblActive"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Active" />
+        android:layout_height="50dp"
+
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Active"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/activity_main_item_lblNickName"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/separator"
+        android:id="@+id/activity_main_item_separator"
         android:layout_width="fill_parent"
         android:layout_height="0.2dp"
+        android:layout_marginTop="8dp"
+        android:background="@android:color/darker_gray"
         android:visibility="visible"
-        android:background="@android:color/darker_gray"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_main_item_lblNickName" />
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
